implement sensorentity test